--- a/www/style/1/www/_main.css
+++ b/www/style/1/www/_main.css
@@ -765,21 +765,21 @@ button,input[type="checkbox"],input[type="radio"],input[type="reset"],input[type
 	background: #000;
 	-moz-opacity: .10;
 	opacity: .10;
-	filter: alpha(opacity =                                             
+	filter: alpha(opacity =                                              
 		                                                         
 		                                                         
 		                                                                    
-		                                    10);
+		                                     10);
 	z-index: 9049;
 }
 
 .yui-skin-sam .yui-ac iframe {
 	opacity: 0;
-	filter: alpha(opacity =                                             
+	filter: alpha(opacity =                                              
 		                                                         
 		                                                         
 		                                                                     
-		                                   0);
+		                                    0);
 	padding-right: .3em;
 	padding-bottom: .3em;
 }
@@ -1328,11 +1328,11 @@ p#clear {
 .yui-skin-sam .yui-calcontainer .yui-cal-nav-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                                             
+	filter: alpha(opacity =                                              
 		                                                         
 		                                                         
 		                                                                    
-		                                    25);
+		                                     25);
 }
 
 .yui-skin-sam .yui-calcontainer .yui-cal-nav {
@@ -1723,14 +1723,14 @@ p#clear {
 
 * html .yui-picker-bg {
 	background-image: none;
-	filter: progid :                          
+	filter: progid :                           
 		                                                        
 		                                                        
 		                           
 		                           
 		                           
 		                           
-		              DXImageTransform.Microsoft.AlphaImageLoader (  
+		               DXImageTransform.Microsoft.AlphaImageLoader (   
 		              
 		 
 		   
@@ -1751,7 +1751,8 @@ p#clear {
 		 
 		    
 		                                                                   
-		                                                               src = 
+		                                                                src =
+		 
 		   
 		        
 		                
@@ -1768,8 +1769,8 @@ p#clear {
 		                      
 		                      
 		                      
-		                  '../../build/colorpicker/assets/picker_mask.png',
-		sizingMethod =            
+		                   '../../build/colorpicker/assets/picker_mask.png',
+		sizingMethod =             
 		 
 		   
 		                
@@ -1789,7 +1790,7 @@ p#clear {
 		   
 		                                                               
 		                                                               
-		     'scale' );
+		      'scale' );
 }
 
 .yui-picker-mask {
@@ -1964,11 +1965,11 @@ p#clear {
 .yui-skin-sam .mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                                             
+	filter: alpha(opacity =                                              
 		                                                         
 		                                                         
 		                                                                    
-		                                    25);
+		                                     25);
 }
 
 .yui-skin-sam .yui-panel-container {
@@ -2073,11 +2074,11 @@ p#clear {
 	_margin-left: -1px;
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =                                             
+	filter: alpha(opacity =                                              
 		                                                         
 		                                                         
 		                                                                    
-		                                    12);
+		                                     12);
 }
 
 .yui-skin-sam .yui-dialog .ft {
@@ -2193,11 +2194,11 @@ p#clear {
 
 .yui-skin-sam .yui-tt-shadow-visible {
 	opacity: .12;
-	filter: alpha(opacity =                                             
+	filter: alpha(opacity =                                              
 		                                                         
 		                                                         
 		                                                                    
-		                                    12);
+		                                     12);
 }
 
 .yui-skin-sam .yui-dt-mask {
@@ -2259,11 +2260,11 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	cursor: col-resize;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =                                             
+	filter: alpha(opacity =                                              
 		                                                         
 		                                                         
 		                                                                     
-		                                   0);
+		                                    0);
 }
 
 .yui-dt-resizerproxy {
@@ -2272,11 +2273,11 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	z-index: 9000;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =                                             
+	filter: alpha(opacity =                                              
 		                                                         
 		                                                         
 		                                                                     
-		                                   0);
+		                                    0);
 }
 
 th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .yui-dt-resizer
@@ -2372,11 +2373,11 @@ th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .
 .yui-skin-sam .yui-dt-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                                             
+	filter: alpha(opacity =                                              
 		                                                         
 		                                                         
 		                                                                    
-		                                    25);
+		                                     25);
 }
 
 .yui-skin-sam .yui-dt-message {
@@ -2763,21 +2764,21 @@ tbody .yui-dt-editable {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =                                             
+	filter: alpha(opacity =                                              
 		                                                         
 		                                                         
 		                                                                    
-		                                    50);
+		                                     50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =                                             
+	filter: alpha(opacity =                                              
 		                                                         
 		                                                         
 		                                                                    
-		                                    50);
+		                                     50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -2875,11 +2876,11 @@ tbody .yui-dt-editable {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =                                             
+	filter: alpha(opacity =                                              
 		                                                         
 		                                                         
 		                                                                    
-		                                    50);
+		                                     50);
 }
 
 .yui-editor-container iframe {
@@ -3980,11 +3981,11 @@ h2.yui-editor-skipheader,h3.yui-editor-skipheader {
 .yui-skin-sam .yui-crop .yui-crop-mask {
 	background-color: #000;
 	opacity: .5;
-	filter: alpha(opacity =                                             
+	filter: alpha(opacity =                                              
 		                                                         
 		                                                         
 		                                                                    
-		                                    50);
+		                                     50);
 }
 
 .yui-skin-sam .yui-crop .yui-resize {
@@ -4751,11 +4752,11 @@ body.yui-layout {
 .yui-skin-sam .yui-menu-shadow-visible {
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =                                             
+	filter: alpha(opacity =                                              
 		                                                         
 		                                                         
 		                                                                    
-		                                    12);
+		                                     12);
 }
 
 .yui-skin-sam .yuimenuitem-selected {
@@ -5266,20 +5267,20 @@ body.yui-layout {
 .yui-resize-hover .yui-resize-handle,.yui-resize-hidden .yui-resize-handle
 	{
 	opacity: 0;
-	filter: alpha(opacity =                                             
+	filter: alpha(opacity =                                              
 		                                                         
 		                                                         
 		                                                                     
-		                                   0);
+		                                    0);
 }
 
 .yui-resize-ghost {
 	opacity: .5;
-	filter: alpha(opacity =                                             
+	filter: alpha(opacity =                                              
 		                                                         
 		                                                         
 		                                                                    
-		                                    50);
+		                                     50);
 }
 
 .yui-resize-knob .yui-resize-handle {
@@ -5367,11 +5368,11 @@ body.yui-layout {
 
 .yui-skin-sam .yui-resize-hover .yui-resize-handle-active {
 	opacity: 1;
-	filter: alpha(opacity =                                            
+	filter: alpha(opacity =                                             
 		                                                         
 		                                                         
 		                                                                   
-		                                      100);
+		                                       100);
 }
 
 .yui-skin-sam .yui-resize-proxy {
@@ -5627,21 +5628,21 @@ body.yui-layout {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =                                             
+	filter: alpha(opacity =                                              
 		                                                         
 		                                                         
 		                                                                    
-		                                    50);
+		                                     50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =                                             
+	filter: alpha(opacity =                                              
 		                                                         
 		                                                         
 		                                                                    
-		                                    50);
+		                                     50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -5739,11 +5740,11 @@ body.yui-layout {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =                                             
+	filter: alpha(opacity =                                              
 		                                                         
 		                                                         
 		                                                                    
-		                                    50);
+		                                     50);
 }
 
 .yui-editor-container iframe {
@@ -7801,13 +7802,13 @@ a#asignup {
 	background-color: #19558D;
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#0000FF', endColorstr='#19558D')";
-	filter: progid :                
+	filter: progid :                 
 		                                                        
 		                                                        
 		                                   
 		                                   
 		                                   
-		DXImageTransform.Microsoft.gradient (   
+		 DXImageTransform.Microsoft.gradient (    
 		
 		 
 		    
@@ -7825,7 +7826,7 @@ a#asignup {
 		                 
 		                                                         
 		                                                         
-		 startColorstr =    
+		  startColorstr =     
 		 
 		   
 		      
@@ -7837,7 +7838,7 @@ a#asignup {
 		              
 		                            
 		                                                             
-		                                "#0000FF", endColorstr =
+		                                 "#0000FF", endColorstr = 
 		               
 		                               
 		 
@@ -7848,7 +7849,7 @@ a#asignup {
 		 
 		      
 		                                                             
-		                                          "#19558D" );
+		                                           "#19558D" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#0000FF),
 		to(#19558D) );
 	background: -moz-linear-gradient(top, #0000FF, #19558D);
@@ -8001,6 +8002,15 @@ div#layout1 div#qview-body {
 
 .home {
 	background-position: -298px -120px;
+}
+
+.globe {
+	background-position: -179px -151px;
+}
+
+
+.sweep {
+	background-position: -29px -61px;
 }
 
 .more {
@@ -8453,12 +8463,12 @@ li.tsearch {
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#A7BBCC', endColorstr='#879BAD')";
-	filter: progid :   
+	filter: progid :    
 		                                                        
 		                                                        
 		                                   
 		                                   
-		                       DXImageTransform.Microsoft.gradient (       
+		                        DXImageTransform.Microsoft.gradient (        
 		                  
 		
 		 
@@ -8473,7 +8483,7 @@ li.tsearch {
 		  
 		       
 		                                                         
-		                                              startColorstr =    
+		                                               startColorstr =     
 		              
 		                             
 		 
@@ -8482,7 +8492,7 @@ li.tsearch {
 		              
 		                            
 		                                                             
-		                                            "#A7BBCC", endColorstr =
+		                                             "#A7BBCC", endColorstr = 
 		   
 		       
 		               
@@ -8493,7 +8503,7 @@ li.tsearch {
 		              
 		                             
 		                                                             
-		                               "#879BAD" );
+		                                "#879BAD" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#A7BBCC),
 		to(#879BAD) );
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
@@ -9304,7 +9314,8 @@ div.vote {
 	margin-top: 5px;
 	margin-bottom: 10px;
 	/*border-top: 1px solid #333;
-	*/width: 50%;
+	*/
+	width: 50%;
 	padding-top: 10px;
 }
 
@@ -10417,7 +10428,8 @@ h2.definition {
 }
 
 span.inreply {
-	font-weight: bold; position : relative;
+	font-weight: bold;
+	position: relative;
 	float: left;
 	clear: both;
 	margin-bottom: 5px;
@@ -10428,4 +10440,12 @@ span.inreply {
 
 .parent_comment,.parent_comment2 {
 	background-color: #E1EAF2;
+}
+
+#id_locale {
+	margin-left: 6px;
+}
+
+#id_langs div {
+	margin-top: 3px;
 }
